@@ -1,14 +1,14 @@
 package net.datafaker.providers.base;
 
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class CosmereTest extends AbstractBasicProviderTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(() -> faker.cosmere().aons(), "cosmere.aons"),
+        return List.of(TestSpec.of(() -> faker.cosmere().aons(), "cosmere.aons"),
                 TestSpec.of(() -> faker.cosmere().shardWorlds(), "cosmere.shard_worlds"),
                 TestSpec.of(() -> faker.cosmere().shards(), "cosmere.shards"),
                 TestSpec.of(() -> faker.cosmere().surges(), "cosmere.surges"),
