@@ -1,14 +1,14 @@
 
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class KpopTest extends AbstractBasicProviderTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(() -> faker.kpop().iGroups(), "kpop.i_groups"),
+        return List.of(TestSpec.of(() -> faker.kpop().iGroups(), "kpop.i_groups"),
                 TestSpec.of(() -> faker.kpop().iiGroups(), "kpop.ii_groups"),
                 TestSpec.of(() -> faker.kpop().iiiGroups(), "kpop.iii_groups"),
                 TestSpec.of(() -> faker.kpop().girlGroups(), "kpop.girl_groups"),
