@@ -6,7 +6,7 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.lang.reflect.InvocationTargetException;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -30,7 +30,7 @@ class RelationshipTest extends AbstractBasicProviderTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(() -> faker.relationships().direct(), "relationship.familial.direct"),
+        return List.of(TestSpec.of(() -> faker.relationships().direct(), "relationship.familial.direct"),
                 TestSpec.of(() -> faker.relationships().extended(), "relationship.familial.extended"),
                 TestSpec.of(() -> faker.relationships().inLaw(), "relationship.in_law"),
                 TestSpec.of(() -> faker.relationships().spouse(), "relationship.spouse"),
