@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class AquaTeenHungerForceTest extends EntertainmentFakerTest {
@@ -8,7 +8,7 @@ class AquaTeenHungerForceTest extends EntertainmentFakerTest {
     private final AquaTeenHungerForce aquaTeenHungerForce = getFaker().aquaTeenHungerForce();
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(aquaTeenHungerForce::character, "aqua_teen_hunger_force.character"));
     }
 }
