@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class BuffyTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class BuffyTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(buffy::characters, "buffy.characters"),
             TestSpec.of(buffy::quotes, "buffy.quotes"),
             TestSpec.of(buffy::celebrities, "buffy.celebrities"),
