@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 
@@ -10,7 +10,7 @@ class HeyArnoldTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(heyArnold::characters, "hey_arnold.characters"),
             TestSpec.of(heyArnold::locations, "hey_arnold.locations"),
             TestSpec.of(heyArnold::quotes, "hey_arnold.quotes")
