@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class ResidentEvilTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class ResidentEvilTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(residentEvil::biologicalAgent, "games.resident_evil.biological-agents"),
             TestSpec.of(residentEvil::character, "games.resident_evil.characters"),
             TestSpec.of(residentEvil::creature, "games.resident_evil.creatures"),
