@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class StrangerThingsTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class StrangerThingsTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(strangerThings::character, "stranger_things.character"),
             TestSpec.of(strangerThings::quote, "stranger_things.quote")
         );
