@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class SupernaturalTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class SupernaturalTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(supernatural::character, "supernatural.character"),
             TestSpec.of(supernatural::creature, "supernatural.creature"),
             TestSpec.of(supernatural::weapon, "supernatural.weapon")
