@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class TheKingkillerChronicleTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class TheKingkillerChronicleTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(theKingkillerChronicle::book, "the_kingkiller_chronicle.books"),
             TestSpec.of(theKingkillerChronicle::character, "the_kingkiller_chronicle.characters"),
             TestSpec.of(theKingkillerChronicle::creature, "the_kingkiller_chronicle.creatures"),
