@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class VForVendettaTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class VForVendettaTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(vForVendetta::characters, "v_for_vendetta.characters"),
             TestSpec.of(vForVendetta::quotes, "v_for_vendetta.quotes"),
             TestSpec.of(vForVendetta::speeches, "v_for_vendetta.speeches")
