@@ -1,6 +1,6 @@
 package net.datafaker.providers.sport;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 public class BaseballTest extends SportFakerTest {
@@ -9,7 +9,7 @@ public class BaseballTest extends SportFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(baseball::coaches, "baseball.coaches"),
             TestSpec.of(baseball::players, "baseball.players"),
             TestSpec.of(baseball::positions, "baseball.positions"),
