@@ -1,6 +1,6 @@
 package net.datafaker.providers.sport;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class FootballTest extends SportFakerTest {
@@ -9,7 +9,7 @@ class FootballTest extends SportFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(football::coaches, "football.coaches"),
             TestSpec.of(football::competitions, "football.competitions"),
             TestSpec.of(football::players, "football.players"),
