@@ -1,6 +1,6 @@
 package net.datafaker.providers.videogame;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 
@@ -10,7 +10,7 @@ class OverwatchTest extends VideoGameFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(overwatch::hero, "games.overwatch.heroes"),
             TestSpec.of(overwatch::location, "games.overwatch.locations"),
             TestSpec.of(overwatch::quote, "games.overwatch.quotes")
